--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
-h {
-  text-align: center
-}
-
-.job {
+body {
   text-align: center
 }
 
 .dates {
   font-weight: bold
+}
+
+#moto:hover {
+  content:
 }
