--- a/style.css
+++ b/style.css
@@ -1,12 +1,68 @@
 body {
+  background-color: #9fe2bf;
+}
+
+
+img {
+  position: sticky;
+  
+  max-height: 100px;
+  max-width: auto; 
+  object-fit: cover;
+  border-radius: 50%;
+  top: 0;
+  right: 0;
+}
+
+#name {
+  position: sticky;
+  display: inline;
+  top: 0;
+  left: 0;
+}
+
+h2 {
+  font-weight: normal;
+  font-size: 75%;
   text-align: center;
+}
+
+h2:hover {
+  font-size: 150%;
+}
+
+h3 {
+  text-align: center;
+  border-bottom-style: double;
+}
+
+.position {
+ text-align: center;
+ display: inline;
+ position: relative;
+ left: 25%;
 }
 
 .dates {
   font-weight: bold;
+  text-align: right;
+  display: inline;
+  position: relative;
+  left: 60%;
 }
+
 
 ul {
   display: block;
   list-style-type: none;
+  text-align: center;
+}
+
+.job {
+  font-weight: bold;
+  text-align: center;
+  border-bottom: solid;
+  margin-left: 20%;
+  margin-right: 20%;
+
 }
