--- a/style.css
+++ b/style.css
@@ -2,3 +2,35 @@ img {
   border-radius: 50%;
   float: right;
 }
+
+div {
+  text-align: center;
+}
+
+.title {
+  justify-content: right;
+  border-bottom: solid;
+  margin-left: 100px;
+  margin-right: 100px;;
+}
+
+.vaga-block {
+  border-bottom: solid;
+  border-top: solid;
+}
+.swig-block {
+  border-bottom: solid;
+  border-top: solid;
+}
+.li-block {
+  border-bottom: solid;
+  border-top: solid;
+}
+.moto-block {
+  border-bottom: solid;
+  border-top: dotted;
+}
+
+ul {
+  list-style-type:none;
+}
