--- a/style.css
+++ b/style.css
@@ -1,34 +1,51 @@
-img {
-  border-radius: 50%;
-  float: right;
+html {
+  background-color:aliceblue;
 }
 
-div {
+.name {
+ padding-bottom: 1%;
+ padding-left: 0%;
+ padding-right: 0%;
+ font-size: 300%;
+ border-bottom: none;
+}
+
+body {
   text-align: center;
 }
 
-.title {
-  justify-content: right;
+div {
+  position: relative;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
   border-bottom: solid;
-  margin-left: 100px;
-  margin-right: 100px;;
+  max-width: 50%;
+  margin: auto;
 }
 
-.vaga-block {
-  border-bottom: solid;
-  border-top: solid;
+div.contacts {
+  max-width: 50%;
+  padding-bottom: 1%;
+  font-size: 50%;
+  border: dotted;
 }
-.swig-block {
-  border-bottom: solid;
-  border-top: solid;
+
+div.work {
+  font-weight: bold;
+  font-size: 150%;
 }
-.li-block {
-  border-bottom: solid;
-  border-top: solid;
+
+div.contacts:hover {
+  font-size: 100%;
 }
-.moto-block {
-  border-bottom: solid;
-  border-top: dotted;
+
+
+img {
+  border-radius: 50%;
+  position: fixed;
+  right: 0;
+  margin: auto;
 }
 
 ul {
